@@ -23,6 +23,8 @@ import com.google.common.base.Preconditions;
 import com.google.protobuf.ByteString;
 import com.google.protobuf.UnsafeByteOperations;
 import java.io.IOException;
+import java.io.PrintWriter;
+import java.io.StringWriter;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
 import java.util.ArrayList;
@@ -31,15 +33,18 @@ import java.util.EnumMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.LongConsumer;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import javax.annotation.Nullable;
-import org.apache.pinot.common.exception.QueryException;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.pinot.common.response.ProcessingException;
 import org.apache.pinot.common.utils.DataSchema;
 import org.apache.pinot.common.utils.DataSchema.ColumnDataType;
 import org.apache.pinot.segment.spi.memory.CompoundDataBuffer;
 import org.apache.pinot.segment.spi.memory.DataBuffer;
 import org.apache.pinot.segment.spi.memory.PinotByteBuffer;
+import org.apache.pinot.spi.exception.QueryErrorCode;
+import org.apache.pinot.spi.exception.QueryException;
 
 
 public final class DataBlockUtils {
@@ -74,6 +79,8 @@ public final class DataBlockUtils {
    * even for the same format.
    */
   private static final EnumMap<DataBlockSerde.Version, DataBlockSerde> SERDES;
+  private static final Pattern CAUSE_CAPTION_REGEXP = Pattern.compile("^([\\t]*)Caused by: ");
+  private static final Pattern SUPPRESSED_CAPTION_REGEXP = Pattern.compile("^([\\t]*)Suppressed: ");
 
   static {
     SERDES = new EnumMap<>(DataBlockSerde.Version.class);
@@ -97,10 +104,14 @@ public final class DataBlockUtils {
 
   public static MetadataBlock getErrorDataBlock(Exception e) {
     if (e instanceof ProcessingException) {
-      return getErrorDataBlock(Collections.singletonMap(((ProcessingException) e).getErrorCode(), extractErrorMsg(e)));
+      int errorCodeId = ((ProcessingException) e).getErrorCode();
+      return getErrorDataBlock(Collections.singletonMap(errorCodeId, extractErrorMsg(e)));
+    } else if (e instanceof QueryException) {
+      int errorCodeId = ((QueryException) e).getErrorCode().getId();
+      return getErrorDataBlock(Collections.singletonMap(errorCodeId, extractErrorMsg(e)));
     } else {
       // TODO: Pass in meaningful error code.
-      return getErrorDataBlock(Collections.singletonMap(QueryException.UNKNOWN_ERROR_CODE, extractErrorMsg(e)));
+      return getErrorDataBlock(Map.of(QueryErrorCode.UNKNOWN.getId(), extractErrorMsg(e)));
     }
   }
 
@@ -108,7 +119,44 @@ public final class DataBlockUtils {
     while (t.getCause() != null && t.getMessage() == null) {
       t = t.getCause();
     }
-    return t.getMessage() + "\n" + QueryException.getTruncatedStackTrace(t);
+    return t.getMessage() + "\n" + getTruncatedStackTrace(t);
+  }
+
+  /**
+   * Truncate the stack trace of the given {@link Throwable} to a maximum of 5 lines per frame.
+   * <p>
+   * This method is deprecated because it is not used in the codebase and it is not clear what is the purpose of
+   * truncating the stack trace.
+   * <p>
+   * The method is kept here for reference and in case it is needed in the future.
+   *
+   * @deprecated We still need to think whether and how to send stack traces downstream
+   */
+  @Deprecated
+  private static String getTruncatedStackTrace(Throwable t) {
+    StringWriter stringWriter = new StringWriter();
+    t.printStackTrace(new PrintWriter(stringWriter));
+    String fullStackTrace = stringWriter.toString();
+    String[] lines = StringUtils.split(fullStackTrace, '\n');
+    // exception should at least have one line, no need to check here.
+    StringBuilder sb = new StringBuilder(lines[0]);
+    int lineOfStackTracePerFrame = 1;
+    int maxLinesOfStackTracePerFrame = 5;
+    for (int i = 1; i < lines.length; i++) {
+      if (CAUSE_CAPTION_REGEXP.matcher(lines[i]).find() || SUPPRESSED_CAPTION_REGEXP.matcher(lines[i]).find()) {
+        // reset stack trace print counter when a new cause or suppressed Throwable were found.
+        if (lineOfStackTracePerFrame >= maxLinesOfStackTracePerFrame) {
+          sb.append('\n').append("...");
+        }
+        sb.append('\n').append(lines[i]);
+        lineOfStackTracePerFrame = 1;
+      } else if (lineOfStackTracePerFrame < maxLinesOfStackTracePerFrame) {
+        // only print numLinesOfStackTrace stack trace and ignore any additional lines.
+        sb.append('\n').append(lines[i]);
+        lineOfStackTracePerFrame++;
+      }
+    }
+    return sb.toString();
   }
 
   public static MetadataBlock getErrorDataBlock(Map<Integer, String> exceptions) {
